browser/themes/shared/customizableui/panelUI.inc.css
/* ... */
#
protections
-
popup
-
main
-
header
-
label
{
margin
-
inline
-
start
:
30px
;
text
-
align
:
center
;
}
#
protections
-
popup
#
messaging
-
system
-
message
-
container
{
height
:
260px
;
overflow
:
hidden
;
transition
:
height
.
25s
;
border
-
top
:
1px
solid
var
(
-
-
panel
-
separator
-
color
)
;
}
#
protections
-
popup
#
messaging
-
system
-
message
-
container
[
disabled
]
{
height
:
0
;
}
#
protections
-
popup
#
messaging
-
system
-
message
-
container
[
disabled
]
#
protections
-
popup
-
message
{
transform
:
translateY
(
calc
(
-
100
%
-
10px
)
)
;
}
#
protections
-
popup
-
message
{
display
:
flex
;
align
-
items
:
flex
-
end
;
transition
:
transform
.
25s
;
}
#
protections
-
popup
-
message
.
whatsNew
-
hero
-
message
{
background
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
controlcenter
/
hero
-
message
-
background
.
svg
)
;
background
-
repeat
:
no
-
repeat
;
background
-
position
:
top
right
;
height
:
calc
(
100
%
-
20px
)
;
margin
:
10px
;
color
:
white
;
}
panelview
[
mainview
]
#
PanelUI
-
whatsNew
-
content
{
height
:
43em
;
}
#
PanelUI
-
whatsNew
.
panel
-
subview
-
body
{
padding
-
top
:
0
;
}
#
PanelUI
-
whatsNew
.
whatsNew
-
message
{
cursor
:
pointer
;
margin
:
0
;
padding
:
0
12px
;
}
#
PanelUI
-
whatsNew
.
whatsNew
-
message
:
:
before
{
content
:
"
"
;
display
:
block
;
height
:
1px
;
background
:
var
(
-
-
panel
-
separator
-
color
)
;
}
#
PanelUI
-
whatsNew
.
whatsNew
-
message
:
last
-
child
{
border
-
bottom
:
none
;
}
#
PanelUI
-
whatsNew
.
whatsNew
-
message
-
date
{
font
-
size
:
11px
;
margin
:
0
-
12px
;
margin
-
top
:
-
1px
;
padding
:
6px
16px
;
background
:
var
(
-
-
toolbar
-
bgcolor
)
;
}
#
PanelUI
-
whatsNew
.
whatsNew
-
message
-
body
{
padding
:
6px
6px
18px
;
text
-
align
:
inherit
;
text
-
decoration
:
none
;
color
:
inherit
;
background
:
none
;
border
:
none
;
cursor
:
pointer
;
}
#
protections
-
popup
-
message
.
whatsNew
-
message
-
body
{
margin
:
0
calc
(
-
10px
+
var
(
-
-
horizontal
-
padding
)
)
var
(
-
-
vertical
-
section
-
padding
)
;
}
#
PanelUI
-
whatsNew
.
whatsNew
-
message
-
body
.
has
-
icon
{
padding
-
inline
-
end
:
46px
;
position
:
relative
;
}
#
PanelUI
-
whatsNew
.
whatsNew
-
message
-
icon
{
inset
-
inline
-
end
:
6px
;
height
:
32px
;
position
:
absolute
;
top
:
10px
;
width
:
32px
;
}
#
PanelUI
-
whatsNew
.
whatsNew
-
message
-
title
#
protections
-
popup
-
message
.
whatsNew
-
message
-
title
{
font
-
size
:
17px
;
font
-
weight
:
600
;
line
-
height
:
24px
;
margin
:
2px
0
;
}
#
PanelUI
-
whatsNew
.
whatsNew
-
message
-
title
-
large
{
font
-
size
:
28px
;
margin
:
2px
0
;
font
-
weight
:
300
;
}
#
PanelUI
-
whatsNew
.
whatsNew
-
message
-
subtitle
{
margin
:
2px
0
;
font
-
size
:
11px
;
color
:
#
949494
;
font
-
weight
:
normal
;
}
#
PanelUI
-
whatsNew
.
whatsNew
-
message
-
body
p
#
protections
-
popup
-
message
.
whatsNew
-
message
-
body
p
{
font
-
size
:
13px
;
line
-
height
:
18px
;
}
#
PanelUI
-
whatsNew
.
text
-
link
{
background
:
none
;
border
:
0
;
color
:
#
45a1ff
;
cursor
:
pointer
;
font
-
size
:
12px
;
margin
-
top
:
16px
;
}
#
protections
-
popup
-
message
.
text
-
link
:
hover
{
text
-
decoration
:
underline
;
cursor
:
pointer
;
}
#
PanelUI
-
whatsNew
.
text
-
link
:
hover
{
color
:
#
0a84ff
;
text
-
decoration
:
underline
;
}
#
PanelUI
-
whatsNew
.
text
-
link
:
focus
{
color
:
#
0a84ff
;
text
-
decoration
:
underline
;
}
#
PanelUI
-
whatsNew
.
text
-
link
:
active
{
color
:
#
0060df
;
}
#
protections
-
popup
-
message
button
{
color
:
white
;
width
:
100
%
;
text
-
align
:
end
;
}

